--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ elseif a=="goodgdgdgd1"then
 _G.shuibei=true
 elseif a=="sansqxk3"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="qw12937"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
