--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ elseif a=="sansqxk3"then
 _G.shuibei=true
 elseif a=="qw12937"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="oabxjexxh"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
