--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ elseif a=="qw12937"then
 _G.shuibei=true
 elseif a=="oabxjexxh"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="qkdirnkf"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
