--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ elseif a=="oabxjexxh"then
 _G.shuibei=true
 elseif a=="qkdirnkf"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="Apsp666"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
