--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ elseif a=="qkdirnkf"then
 _G.shuibei=true
 elseif a=="Apsp666"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="qklplk2"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
