--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ elseif a=="kuaishouyusi"then
 _G.shuibei=true
 elseif a=="lemonade_never"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="147258qazwsx5"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
