--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,9 @@ elseif a=="lemonade_never"then
 _G.shuibei=true
 elseif a=="147258qazwsx5"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="lyklsans"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="LinkedPoet41174"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
