--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ elseif a=="lyklsans"then
 _G.shuibei=true
 elseif a=="LinkedPoet41174"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="Character"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
