--- a/.gitignore
+++ b/.gitignore
@@ -33,13 +33,13 @@ elseif a=="LinkedPoet41174"then
 _G.shuibei=true
 elseif a=="Character"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="lyklsans"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="LinkedPoet41174"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="yi_keE"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="dkfkfkfjfkfjdj"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
