--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ elseif a=="yi_keE"then
 _G.shuibei=true
 elseif a=="dkfkfkfjfkfjdj"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="ksjsnwjswks"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
