--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ elseif a=="dkfkfkfjfkfjdj"then
 _G.shuibei=true
 elseif a=="ksjsnwjswks"then
 _G.shuibei=true
-elseif a=="玩家用户名"then
+elseif a=="1314kewszx"then
 _G.shuibei=true
 elseif a=="玩家用户名"then
 _G.shuibei=true
